--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 install:
-  - pip install -r -requirements.txt
+  - pip install -r requirements.txt
   - pip install codecov
 
 script:
