--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install codecov
+  - pip install coverage
 
 script:
   - pytest
 
 after_success:
-  - codecov
+  - pytest --cov=./
