--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - "3.7.4"
 
+before_install:
+  - pip install -U pip
+
 install:
   - pip install -r requirements.txt
   - pip install coverage codecov pytest-cov
@@ -14,4 +17,4 @@ script:
   - pytest
 
 after_success:
-  - pytest --cov=./
+  - codecov
