--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ services:
   - docker
 
 before_install:
-  - docker build --tag django_website .
-  - docker push jchamblee1995/django_website:latest
   - pip install -U pip
 
 install:
@@ -20,12 +18,10 @@ env:
 
 script:
   - pytest --cov=fitness --cov=blog --cov=users
-  - docker build -t jchamblee1995/django_website:latest .
-
-after_script:
 
 before_deploy:
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+  - docker login -u "$DOCKER_USERNAME" --password-stdin "$DOCKER_PASSWORD"
+  - docker build -t jchamblee1995/django_website:latest .
 
 deploy:
   provider: script
