--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - pip install -U pip
 
 install:
+  - easy_install distribute
   - pip install -r requirements.txt
   - pip install coverage codecov pytest-cov
 
